// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`공용 컴포넌트 신규 / 보정 > EmptyPane 1`] = `
<DocumentFragment>
  <div
    class="p-s-8 flex h-full flex-col items-center justify-center text-center"
    data-slot="empty-pane"
  >
    <div
      aria-hidden="true"
      class="bg-card border-border mb-s-5 flex h-16 w-16 items-center justify-center rounded-lg border"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-inbox text-foreground-muted h-8 w-8"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="22 12 16 12 14 15 10 15 8 12 2 12"
        />
        <path
          d="M5.45 5.11 2 12v6a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2v-6l-3.45-6.89A2 2 0 0 0 16.76 4H7.24a2 2 0 0 0-1.79 1.11z"
        />
      </svg>
    </div>
    <h3
      class="text-foreground text-subtitle mb-s-2 font-bold"
    >
      선택된 항목이 없습니다
    </h3>
    <p
      class="text-foreground-muted text-caption max-w-sm leading-relaxed"
    >
      왼쪽에서 항목을 선택하세요
    </p>
  </div>
</DocumentFragment>
`;

exports[`공용 컴포넌트 신규 / 보정 > RoleBadge(LEADER) 1`] = `
<DocumentFragment>
  <span
    class="rounded-pill inline-flex items-center border px-2 py-0.5 font-semibold bg-amber-dim text-amber border-transparent"
    data-role="LEADER"
    data-slot="role-badge"
  >
    리더
  </span>
</DocumentFragment>
`;

exports[`공용 컴포넌트 신규 / 보정 > SectionTitle with action 1`] = `
<DocumentFragment>
  <div
    class="mb-s-3 gap-s-3 border-border pb-s-2 flex items-center justify-between border-b"
    data-slot="section-title"
  >
    <h2
      class="text-foreground-muted text-caption font-bold tracking-wider uppercase"
    >
      내 밴드
    </h2>
    <div
      class="gap-s-2 flex items-center"
    >
      <a
        href="#"
      >
        전체 보기 →
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`공용 컴포넌트 신규 / 보정 > StatCard 1`] = `
<DocumentFragment>
  <div
    class="relative rounded-xl border border-white/10 bg-white/[0.04] backdrop-blur-lg shadow-[0_0_20px_rgba(96,165,250,0.12),0_0_40px_rgba(96,165,250,0.06),inset_0_1px_0_rgba(255,255,255,0.12)] p-s-4 gap-s-3 flex items-center"
    data-slot="stat-card"
  >
    <div
      aria-hidden="true"
      class="flex h-10 w-10 items-center justify-center rounded-md bg-accent-dim text-accent"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-users h-6 w-6"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
        />
        <path
          d="M16 3.128a4 4 0 0 1 0 7.744"
        />
        <path
          d="M22 21v-2a4 4 0 0 0-3-3.87"
        />
        <circle
          cx="9"
          cy="7"
          r="4"
        />
      </svg>
    </div>
    <div
      class="min-w-0 flex-1"
    >
      <div
        class="text-foreground-sub text-micro"
      >
        소속 밴드
      </div>
      <div
        class="text-foreground text-title-lg leading-tight font-bold"
      >
        3
      </div>
    </div>
  </div>
</DocumentFragment>
`;
